Spacing and text fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -64,7 +64,7 @@ h1 {
     font-family: RobotoCondensed;
     font-size: 64px !important;
     line-height: 4rem;
-    padding-top: 1px;
+    padding-top: 2rem;
             
     @media (max-width: 480px) {
         font-size: 48px !important;
