--- a/src/components/Outline/outline.scss
+++ b/src/components/Outline/outline.scss
@@ -2,7 +2,7 @@
 
 .outline-container {
     font-family: RobotoCondensed;
-    top: 50%;
+    bottom: calc(57px + 2rem);
     position:fixed;
     width:33.3333333%;
     left: calc((100% / 12) - 1rem);
